--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "webpack",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Thanh Nguyen",
   "license": "ISC",
   "devDependencies": {
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
