--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Thanh Nguyen",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.0",
     "csv-loader": "^3.0.2",
     "file-loader": "^3.0.1",
